--- a/components/switch/style/index.scss
+++ b/components/switch/style/index.scss
@@ -9,7 +9,6 @@
   line-height: 18px;
   vertical-align: middle;
   border-radius: 18px;
-  border: 1px solid #bcbcbc;
   background-color: #bcbcbc;
   cursor: pointer;
   transition: left .3s cubic-bezier(.78, .14, .15, .86);
@@ -19,8 +18,8 @@
     position: absolute;
     width: 14px;
     height: 14px;
-    left: 2px;
-    top: 2px;
+    left: 4px;
+    top: 3px;
     border-radius: 100%;
     background-color: #fff;
     content: " ";
@@ -29,11 +28,10 @@
   }
 
   @include m(checked) {
-    border: 1px solid var(--theme-primary);
     background-color: var(--theme-primary);
 
     &:after {
-      left: 28px;
+      left: 30px;
     }
 
     @include e(inner) {
@@ -42,13 +40,13 @@
     @include e(loading) {
       display: inline-block;
       transform: scale(0.5);
-      top: -1px;
-      left: 19px;
+      top: 0px;
+      left: 21px;
       z-index: 2;
       position: relative;
 
       circle {
-        stroke: var(--theme-primary);
+        stroke: var(--theme-primary) !important;
         stroke-width: 10 !important;
       }
     }
@@ -56,7 +54,6 @@
 
   @include m(disabled) {
     cursor: not-allowed;
-    border: 1px solid #dedede;
     background-color: #dedede;
 
     &:after {
@@ -77,17 +74,17 @@
     &:after {
       width: 12px;
       height: 12px;
-      top: 1px;
-      left: 2px;
+      top: 2px;
+      left: 3px;
     }
 
     @include m(checked) {
       &:after {
-        left: 16px;
+        left: 17px;
       }
 
       @include e(inner) {
-        left: 3px;
+        left: 4px;
         position: relative;
       }
 
@@ -95,7 +92,7 @@
         display: inline-block;
         font-size: 10px;
         transform: scale(0.4);
-        top: -5px;
+        top: -4px;
         left: 9px;
         z-index: 2;
         position: relative;
@@ -117,8 +114,8 @@
       display: inline-block;
       font-size: 10px;
       transform: scale(0.4);
-      top: -5px;
-      left: -15px;
+      top: -4px;
+      left: -14px;
       z-index: 2;
       position: relative;
 
@@ -139,13 +136,13 @@
   @include e(loading) {
     display: inline-block;
     transform: scale(0.5);
-    top: -1px;
-    left: -25px;
+    top: 0px;
+    left: -24px;
     z-index: 2;
     position: relative;
 
     circle {
-      stroke: #dedede;
+      stroke: #dedede !important;
       stroke-width: 10 !important;
     }
   }
