--- a/components/breadcrumb/style/component.scss
+++ b/components/breadcrumb/style/component.scss
@@ -1,30 +1,47 @@
-.ui-breadcrumb {
+@import '../../style/themes/variable';
+
+@include b(breadcrumb) {
   margin-bottom: 20px;
   padding: 10px 15px;
-  background-color: #f5f5f5;
+  background-color: #FAFAFA;
   line-height: normal;
-  color: #999;
+  font-size:14px; 
+  color: #909090;
 
-  a {
-    color: #666;
-    text-decoration: none;
 
-    &:hover {
-      color: #2db7f5;
+  @include b(breadcrumb-item) {
+ 
+    @include e(link) {
+      color: #909090;
+      text-decoration: none;
+
+      &:hover {
+        color: #00BC70;            
+      }
     }
-  }
 
-  > span:last-child {
-    font-weight: bold;
-    color: #666;
+    @include e(separator) {
+        margin: 0 8px;
+        color:rgba(0,0,0,0.45);
 
-    .ui-breadcrumb-separator {
-      display: none;
+    }
+
+    &:last-child {
+        font-weight: 400;
+        color: #343434;
+
+        > a {
+            color: #343434;
+
+            &:hover {
+                color: #00BC70;            
+            }
+        }
+
+       > span:last-child {
+            display: none;  
+        }
     }
   }
 }
 
-.ui-breadcrumb-separator {
-  margin: 0 8px;
-  color: #d9d9d9;
-}
