--- a/site/styles/pages/badge.scss
+++ b/site/styles/pages/badge.scss
@@ -6,17 +6,30 @@
     background: #fff;
     width: 100%;
     flex-flow: wrap;
+  }
 
-    .box {
-      width: 25%;
-      margin-bottom: 25px;
-      text-align: center;
+  .box {
+    width: 25%;
+    margin-bottom: 25px;
+    text-align: center;
 
-      &-item {
-        width: 24px;
-        height: 24px;
-        background: #ddd;
-      }
+    &-item {
+      width: 24px;
+      height: 24px;
+      background: #ddd;
+    }
+  }
+
+  .dot-change-box {
+    & > div {
+      margin-bottom: 20px;
+    }
+
+    .zw-btn-group,
+    .zw-switch,
+    .ui-switch {
+      display: inline-block;
+      margin-left: 25px;
     }
   }
 
