--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -180,6 +180,5 @@
   --icon-theme-default: var(--color-text);
 
   // Checkbox
-  --checkbox-inner-w: 14px;
-  --checkbox-inner-h: 14px;
+  --checkbox-size: 14px;
 }
