--- a/components/avatar/style/index.scss
+++ b/components/avatar/style/index.scss
@@ -23,10 +23,12 @@
   > img {
     width: 100%;
     height: 100%;
+    display: block;
   }
 
-  @include avatar-size(var(--avatar-width), var(--avatar-height), var(--avatar-fontSize-icon));
-
+  @include m(md) {
+    @include avatar-size(var(--avatar-width-md), var(--avatar-height-md), var(--avatar-fontSize-icon-md));
+  }
   /* Avatar sizes */
   @include m(xl) {
     @include avatar-size(var(--avatar-width-xl), var(--avatar-height-xl), var(--avatar-fontSize-icon-xl));
@@ -49,27 +51,6 @@
     border-radius: var(--radius-md);
   }
 
-  /* Avatar icon */
-  @include b(icon) {
-    font-size: var(--avatar-fontSize-icon);
-
-    @include m(xl) {
-      font-size: var(--avatar-fontSize-icon-xl);
-    }
-
-    @include m(lg) {
-      font-size: var(--avatar-fontSize-icon-lg);
-    }
-
-    @include m(sm) {
-      font-size: var(--avatar-fontSize-icon-sm);
-    }
-
-    @include m(xs) {
-      font-size: var(--avatar-fontSize-icon-xs);
-    }
-  }
-
   /* Avatar image */
   @include m(image) {
     background: transparent;
@@ -77,7 +58,10 @@
 
   /* Avatar string */
   @include m(string) {
-    font-size: var(--avatar-fontSize);
+    position: absolute;
+    left: 50%;
+    transform-origin: 0 center;
+    transform: translateX(-50%);
   }
 }
 
