--- a/site/styles/pages/badge.scss
+++ b/site/styles/pages/badge.scss
@@ -1,51 +1,14 @@
 .badge-page {
-  .custom-panel {
-    display: flex;
-    justify-content: flex-start;
-    padding: 25px 0 0;
-    background: #fff;
-    width: 100%;
-    flex-flow: wrap;
+  .zw-badge {
+    margin-right: 48px;
   }
 
-  .box {
-    width: 25%;
-    margin-bottom: 25px;
-    text-align: center;
-
-    &-item {
-      width: 24px;
-      height: 24px;
-      background: #ddd;
-    }
-  }
-
-  .dot-change-box {
-    & > div {
-      margin-bottom: 20px;
-    }
-
-    .zw-btn-group,
-    .zw-switch,
-    .ui-switch {
-      display: inline-block;
-      margin-left: 25px;
-    }
-  }
-
-  .text-panel {
-    padding: 25px 30px;
-    display: flex;
-    justify-content: flex-start;
-
-    .box {
-      margin-right: 25px;
-      display: flex;
-      align-items: center;
-
-      &-text {
-        padding-right: 10px;
-      }
-    }
+  .box-item {
+    display: inline-block;
+    width: 42px;
+    height: 42px;
+    border-radius: 4px;
+    background: #ddd;
+    vertical-align: middle;
   }
 }
