--- a/site/styles/pages/loading.scss
+++ b/site/styles/pages/loading.scss
@@ -13,8 +13,7 @@
     border-radius: 4px;
     // margin-bottom: 20px;
     padding: 30px 50px;
-    margin: 20px 0;
-    color: #fff;
+    color: #000;
   }
 
   .exp {
