fix: remove useless code ext and follow the BEM rules in css

--- a/components/dropdown/style/component.scss
+++ b/components/dropdown/style/component.scss
@@ -8,8 +8,13 @@
   text-align: left;
   will-change: transform, opacity;
 
-  &-trigger-box {
+  @include e(trigger-box) {
     display: inline-block;
     vertical-align: middle;
   }
+
+  // &-trigger-box {
+  //   display: inline-block;
+  //   vertical-align: middle;
+  // }
 }
