chore: update tabs

--- a/components/style/components.scss
+++ b/components/style/components.scss
@@ -30,7 +30,7 @@
 @import '../step/style';
 @import '../swipe/style';
 @import '../switch/style';
-@import '../tab/style';
+@import '../tabs/style';
 @import '../table/style';
 @import '../tag/style';
 @import '../tag-input/style';
