fix: fix some test cases

--- a/site/styles/pages/icon.scss
+++ b/site/styles/pages/icon.scss
@@ -20,7 +20,7 @@
       justify-content: center;
       flex-direction: column;
       position: relative;
-      width: 20%;
+      width: 33.3333333%;
       height: 125px;
     }
   }
