--- a/components/breadcrumb/style/component.scss
+++ b/components/breadcrumb/style/component.scss
@@ -1,38 +1,36 @@
-@import '../../style/themes/variable';
 
 @include b(breadcrumb) {
   margin-bottom: 20px;
   padding: 10px 15px;
-  background-color: #fafafa;
   line-height: normal;
-  font-size: 14px;
-  color: #909090;
+  font-size: var(--breadcrumb-default-font-size);
+  color: var(--breadcrumb-default-color);
 
   @include b(breadcrumb-item) {
 
     @include e(link) {
-      color: #909090;
+      color: var(--breadcrumb-default-color);
       text-decoration: none;
 
       &:hover {
-        color: #00bc70;
+        color: var(--breadcrumb-hover-color);
       }
     }
 
     @include e(separator) {
       margin: 0 8px;
-      color: rgba(0, 0, 0, 0.45);
+      color: var(--breadcrumb-separator-color);
     }
 
     &:last-child {
       font-weight: 400;
-      color: #343434;
+      color: var(--breadcrumb-color);
 
       > a {
-        color: #343434;
+        color: var(--breadcrumb-color);
 
         &:hover {
-          color: #00bc70;
+          color: var(--breadcrumb-hover-color);
         }
       }
 
