--- a/components/drawer/style/index.scss
+++ b/components/drawer/style/index.scss
@@ -1,4 +1,5 @@
 @import '../../style/themes/default';
 @import './component';
-@import '~zarm/lib/popup/style/index.css';
-@import '~zarm/lib/mask/style/index.css';
+@import '~zarm/lib/popup/style/index';
+@import '~zarm/lib/mask/style/index';
+@import '~zarm/lib/style/themes/default';
